docs: Get rid of `wolpi:` prefix in config samples
This was only needed when configuring via `application.yaml`, which has
now been superseded.

Also add some flags to the container startup command to silence warnings
from Graal's use of the `Unsafe` class in the JVM.